[feat] 로그추가